load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@pip_deps//:requirements.bzl", "requirement")
#load("@pip_deps//:requirements.bzl", "all_requirements")

py_library(
    name = "graph_lib",
    srcs = ["graph.py"]
)

# "@pip_deps//requests"]
# requirement("requests")]
#  + all_requirements,
# No idea what this means @{name}_{package}//:pkg
py_test(
    name = "graph_test",
    srcs = ["graph_test.py"],
    deps = [":graph_lib",
            requirement("requests")]

)